// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`my DataViewMobile component should render DataViewMobile  Component with props(snapshot) 1`] = `
<div
  className="DataView"
  data-testid="position"
>
  <div
    className="info__title"
  >
    Capital
  </div>
  <div
    className="info__content"
    style={
      Object {
        "maxWidth": undefined,
      }
    }
  >
    London
    <span
      style={
        Object {
          "marginLeft": "10px",
        }
      }
    />
  </div>
</div>
`;

exports[`my DataViewMobile component should render DataViewMobile  Component without props(snapshot) 1`] = `
<div
  className="DataView"
  data-testid="position"
>
  <div
    className="info__title"
  />
  <div
    className="info__content"
    style={
      Object {
        "maxWidth": undefined,
      }
    }
  >
    <span
      style={
        Object {
          "marginLeft": "10px",
        }
      }
    />
  </div>
</div>
`;
